restyled cards and fixed mathjax overflow

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -460,7 +460,7 @@ span[data-category], [data-category]>cite {border-bottom: 0.125rem solid var(--c
 
 /* Portfolio stuff */
 .portfolio {
-  flex-wrap: wrap;
+    flex-direction: column;
   align-items: start;
   justify-content: space-around;
   list-style: none;
@@ -469,66 +469,30 @@ span[data-category], [data-category]>cite {border-bottom: 0.125rem solid var(--c
   flex: 1 1 15rem;
   margin: 1rem;
 }
+
+.card picture {
+    margin:0.5rem 0.5rem 0.5rem 0.125rem;
+    border: 0.125rem solid var(--clr-fg);
+    max-width: -moz-fit-content;
+    max-width: fit-content;
+}
+@media screen and (min-width: 50em) {
+    .card picture {
+        float: left;
+        margin-bottom:0.125rem;
+        max-width: 12.5rem;
+  }
+}
+
 .card {
-  --br-rad: 1.5em;
-  flex-direction: column;
-  align-content: baseline;
-  min-width: 10rem;
-  max-width: 20rem;
-  border: 0.125rem solid var(--clr-fg);
-  border-radius: var(--br-rad);
-  box-shadow: 0 0.5rem 0.5rem 0 hsl(var(--clr-fg-hsl)/0.5);
-  font-size: var(--fs-300);
+  font-size: var(--fs-300); 
+  flex-grow: 1;
 }
-.card:focus-within, .card:hover {box-shadow: 0 0 0 0.25rem;}
-.card-description {
-  position: relative;
-  flex-direction: column;
-  padding: 1em 0.5em;
-}
-/* .card-description::before {
-  content: var(--tag,'');
-  position: absolute;
-  top: -2rem;
-  border-radius: 25%;
-  padding: 0.25rem;
-  background-color: var(--clr-fg);
-  color: var(--clr-bg);
-  font-weight: 600;
-} */
-.ribbon {
-    font-weight: 600;
-    color: var(--clr-bg);
-}
-.ribbon {
-    --r: .4em;
-    --c: var(--clr-fg);
-
-    position: absolute;
-    top: -1rem;
-    left: calc(-1*var(--r));
-    padding: 0.25em .5em calc(2*var(--r));
-    border-radius: var(--r) 0 0 var(--r);
-    background: 
-        radial-gradient(100% 50% at left,var(--c) 98%,#0000 101%)
-        100% 0/.5lh calc(100% - 2*var(--r)),
-        radial-gradient(100% 50% at right,#0005 98%,#0000 101%) 
-        0 100%/var(--r) calc(2*var(--r)),
-        conic-gradient(from 90deg at var(--r) calc(100% - 2*var(--r)),#0000 25%,var(--c) 0)
-        0 0/calc(101% - .5lh) 100%;
-    background-repeat: no-repeat;   
-}
-
-.card-description > h4 {margin: 0 0 0.5em;}
-.card-img {
-  background-image: var(--img-src,var(--clr-bg));
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 10rem;
-  border-top-left-radius: inherit !important;
-  border-top-right-radius: inherit !important;
+.card:focus-within {
+    outline-offset: 0.25rem;
+    outline-color: var(--clr-fg);
+    outline-style: dashed;
+    outline-width: 0.125rem;
 }
 .card-link {
     margin: 0.25em;
@@ -548,4 +512,9 @@ code, kbd, pre {
   border-radius: .4rem;
   padding: 0.4rem;
   font-family: var(--ff-mono);
+}
+
+/* fix mjx overflow */
+mjx-container {
+    overflow-x: scroll;
 }
